# fluent-bit-js

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  fluent-bit-js.cc  fluent-bit-js.h  fluent_bit.js  fluent_bit.test.js  index.js  log_output_test.js  package-lock.json  package.json  test.js
examples/: bindings_usage.js  fluent_bit.js
src/: fluent-bit-js.cc
tests/: bindings.test.js  fluent_bit.test.js
